fix: add `pokemon_encounters` `200` response
